Background workers added
Logged in character name is now displayed in menu Window Title

--- a/todo.txt
+++ b/todo.txt
@@ -1,12 +1,11 @@
 ﻿Easy stuff
-wyswietlanie jako tytul okna nazwa zalogowanej postaci + okno
 Wybór okna Tibii podczas uruchamiania
 automount
-naprawienie wklejania tekstu po wpisaniu czaru
 otwieranie plecaka to raczej easy, bo stała jest szerokość prawego panelu
 
+Dodanie wątku, który zamyka bota jeśli tibia została zamknięta
+
 tryb ataku
-dodanie do targettingu max distance
 jedzenie
 
 
